<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="AlreadyCooler">Already Cooled Down</string>
    <string name="AlreadybatteryBoosted">Already Battery Boosted</string>
    <string name="AlreadywifiBoost">WiFi is Already Restarted</string>
    <string name="MaxPowersaver">Maximum Power Saver</string>
    <string name="Powersaver">Power Saver</string>
    <string name="SubTextSplash">Speed up Phone and have fun!</string>
    <string name="WiFi">WiFi</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_ustext">Smart Phone Booster 1.0.1\10CopyRights ©2021 Pro Trusted Apps\10All Rights Reserved</string>
    <string name="aboutus">About Us</string>
    <string name="action_settings">Settings</string>
    <string name="addToIgnoreList">Add to Ignore List</string>
    <string name="addtoIgnorListDialogTxt">Long press on list item to add application in ignore list(top right corner)</string>
    <string name="advanceBoost">ADVANCE</string>
    <string name="agree">Agree to Privacy Policy</string>
    <string name="alreadyBooster">Already Boosted</string>
    <string name="anaylizingUsage">Scanning Battery Usage</string>
    <string name="app_name">Smart Phone Booster</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="battery">Battery</string>
    <string name="batteryBoosted">Battery Boosted</string>
    <string name="batteryLife">Battery Life</string>
    <string name="batteryfull">Battery Full</string>
    <string name="boost">BOOST</string>
    <string name="boost_now">OPTIMIZE</string>
    <string name="boosted">Boosted</string>
    <string name="boostedSub">Enjoy Free Space</string>
    <string name="booster">Phone Boosted</string>
    <string name="boostertit">Booster</string>
    <string name="boostingStatus">Boosting Status:</string>
    <string name="boostingStatus_intial">Boosting Status: Initializing ...</string>
    <string name="boosting_network">Restarting Network</string>
    <string name="boosttext">If you like Smart Phone Booster, show us some love with a 5-Stars rating. It really helps!</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="cache_clean">Clean Cache</string>
    <string name="canbeSave">can be save</string>
    <string name="cancel">Cancel</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chargeTime">Charge Time : </string>
    <string name="clean">BOOST</string>
    <string name="clean_up">Clean Now</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="cool_now">Cool Down</string>
    <string name="cooler">Cooled Down</string>
    <string name="coolerPermissionTxt">Please grant permission to detect overheating background apps to prevent overheating caused by excessive use of UPU and to run cooling process smoothly. Don\'t need to worry, not any  private data will be collected</string>
    <string name="coolerSub">Phone is Successfully Cooled</string>
    <string name="coolerSub_des">Enjoy cooled Phone</string>
    <string name="coolertit">Cooler</string>
    <string name="coolingActivitytipTxt">apps consuming system resources</string>
    <string name="coolingDown">Dropping Down</string>
    <string name="cpu_heat">CPU is heating up</string>
    <string name="done">DONE</string>
    <string name="dropped">Dropped</string>
    <string name="email">protrustedapps@gmail.com</string>
    <string name="emptylist">Empty List</string>
    <string name="enjoyBattery">Enjoy Battery Time</string>
    <string name="excellent">Excellent</string>
    <string name="exit">Exit</string>
    <string name="extended">Extending ...</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="fb_banner_id">901722400352058_901722630352035</string>
    <string name="fb_interserial_id">901722400352058_901722937018671</string>
    <string name="fb_native_id">901722400352058_901723370351961</string>
    <string name="feedback">Feedback</string>
    <string name="feedbackTitle">Feedback - Smart Phone Booster 1.0.1</string>
    <string name="finish">Finish</string>
    <string name="free_up">Boost now</string>
    <string name="great">Great!</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="ignore_url">com.ptapps.smartbooster.phonecooler.boost.ramcleaner.fast</string>
    <string name="isAllowedToAccess">isAllowedToAccess</string>
    <string name="junkFound">Junk Found : </string>
    <string name="junkTxt">Phone Junk Deleted</string>
    <string name="junkcleaned">Junk Cleaned!</string>
    <string name="later">Later</string>
    <string name="modeApplied">Mode Applied</string>
    <string name="monitor">Monitor</string>
    <string name="moreAppsLink">https://play.google.com/store/apps/developer?id=Pro+Trusted+Apps&amp;hl=en_GB</string>
    <string name="moreapps">More Apps</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="native_add_text">Loading ... \10Please wait.</string>
    <string name="network_unavailable">WiFi network is not available</string>
    <string name="no_internet">Internet Connection Lost!</string>
    <string name="noitem">No item exist</string>
    <string name="not_staisfy">Not satisfied? Send us feedback</string>
    <string name="off">Off</string>
    <string name="ok">Ok</string>
    <string name="on">On</string>
    <string name="optimized">Optimized</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="permissionGranted">\"Permission Granted\"</string>
    <string name="pleaseSelectOneMode">Firstly please select one Mode from above or press skip</string>
    <string name="presstoCoolDown">COOL DOWN</string>
    <string name="privacyPolicy">@Pro Trusted Apps</string>
    <string name="privacy_url">https://docs.google.com/document/d/1v2IGmJBAn5_SHwYg2bJe7L3bunjL4tlqOqG9E031ynE/edit?usp=sharing</string>
    <string name="ram_free_label">Free</string>
    <string name="ram_used_label">Used</string>
    <string name="ram_used_persentage_label">RAM</string>
    <string name="rateUsLink">https://play.google.com/store/apps/details?id=com.ptapps.smartbooster.phonecooler.boost.ramcleaner.fast</string>
    <string name="rate_five">Rate 5 stars</string>
    <string name="rateus">Rate Us</string>
    <string name="remaining">Remaining Time : </string>
    <string name="running_apps_label">Apps</string>
    <string name="scanning">Scanning Phone</string>
    <string name="search_menu_title">Search</string>
    <string name="selectRadioBtnText">Select saving mode to save Phone Battery</string>
    <string name="settingPermission">Permission Request</string>
    <string name="settingPermission0">Setting Permission</string>
    <string name="settingPermissionTxt">You need to enable write setting to change state</string>
    <string name="settingToast">Find and enable Smart Phone Booster</string>
    <string name="skip">Skip</string>
    <string name="sound">Sound</string>
    <string name="start">GET STARTED</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="stoped">Stopped</string>
    <string name="tap_here">Tap here</string>
    <string name="test">test</string>
    <string name="thanks">Thank you</string>
    <string name="thanks_des">We really need your 5 stars rating to improve the app better!</string>
    <string name="title_activity_ignor_list">Ignore List</string>
    <string name="title_activity_saver_mode">Power Saver</string>
    <string name="try_it">Extend Battery</string>
    <string name="version">Version: 1.0.1</string>
    <string name="wifiBoost">WiFi Restarted</string>
    <string name="wifiBoostSubTxt">Enjoy fresh WiFi now</string>
    <string name="wifiBooster">WiFi Restarter</string>
    <string name="wifiboost_text">WiFi is Restarted Successfully</string>
    <string name="wifibooster_des">Press to start restarting</string>
    <string name="wifibooster_des1">your Network</string>
</resources>
