<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="20dp">

    <Button
        android:id="@+id/permissionBtn"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_below="@+id/permissionSubTxt"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="28dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/primary_border"
        android:text="@string/ok"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <RelativeLayout
        android:id="@+id/ll_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingRight="15dp">

        <TextView
            android:id="@+id/permissionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="4dp"
            android:gravity="center"
            android:text="@string/settingPermission"
            android:textColor="@color/blackcolor"
            android:textSize="20sp"
            />

        <ImageView
            android:id="@+id/crossImg"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/dialog_cancel"
            android:padding="20dp" />
    </RelativeLayout>


    <TextView
        android:id="@+id/permissionSubTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_top"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="16dp"
        android:text="@string/coolerPermissionTxt"
        android:textColor="@color/secondrytext"
        android:textSize="16sp" />
</RelativeLayout>
