<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/splashTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/splash_top"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/splashBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:background="@drawable/splash_bottom"
            android:visibility="visible" />

        <RelativeLayout
            android:id="@+id/splashIconLay"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_centerVertical="true"
            android:layout_marginTop="60dp">

            <ImageView
                android:id="@+id/SplashRocket"
                android:layout_width="105dp"
                android:layout_height="105dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@drawable/logo"
                android:visibility="visible" />
        </RelativeLayout>

        <TextView
            android:id="@+id/splashTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/splashIconLay"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="0dp"
            android:text="@string/app_name"
            android:textColor="@color/blackcolor"
            android:textSize="28sp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/splashSub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/splashTitle"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/SubTextSplash"
            android:textColor="@color/secondrytext"
            android:textSize="16sp"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/progressImage"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_below="@+id/splashSub"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@drawable/hn"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/splashBottomLay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:visibility="gone">

            <Button
                android:id="@+id/privacyButton"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_gravity="right"
                android:layout_marginBottom="20dp"
                android:background="@drawable/primary_border_left"
                android:onClick="startActivity"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:text="@string/start"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/policyLay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="0dp"
                android:onClick="PrivacyClick"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/agreeTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/agree"
                    android:textColor="@color/secondrytext"
                    android:textSize="11sp"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/privacyPolicyTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal"
                    android:text="@string/privacyPolicy"
                    android:textColor="@color/secondrytext"
                    android:textSize="11sp"
                    android:visibility="visible" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
