<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_white">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_size"
        android:background="@color/appcolor">

        <RelativeLayout
            android:id="@+id/backlay"
            android:layout_width="@dimen/header_size"
            android:layout_height="match_parent"
            android:layout_marginLeft="0dp"
            android:background="@drawable/ripple_effect_about">

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="@dimen/back_arrow_size"
                android:layout_height="@dimen/back_arrow_size"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@drawable/arrow" />
        </RelativeLayout>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="0dp"
            android:layout_toRightOf="@+id/backlay"
            android:text="@string/action_settings"
            android:textColor="@color/listitem"
            android:textSize="@dimen/title_text_size" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/shadowImg"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_below="@+id/header"
        android:background="@drawable/bottom_shadow" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/shadowImg"
        android:layout_marginBottom="12dp">

        <LinearLayout
            android:id="@+id/settingMainLay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="@dimen/settings_logoLay_padding">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="@dimen/settings_logo_size"
                    android:layout_height="@dimen/settings_logo_size"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="0dp"
                    android:src="@drawable/logo" />

                <TextView
                    android:id="@+id/appTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/logo"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:text="@string/app_name"
                    android:textColor="@color/blackcolor"
                    android:textSize="@dimen/settings_appTxt_size" />

                <TextView
                    android:id="@+id/verTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/appTxt"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="0dp"
                    android:text="@string/version"
                    android:textColor="@color/secondrytext"
                    android:textSize="@dimen/settings_verTxt_size" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/soundLay"
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_row_height"
                android:layout_below="@+id/ignoreListLay"
                android:background="@drawable/card">

                <TextView
                    android:id="@+id/soundTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:text="@string/sound"
                    android:textColor="@color/secondrytext"
                    android:textSize="@dimen/setting_row_text_size" />

                <LinearLayout
                    android:layout_width="@dimen/sound_layout_width"
                    android:layout_height="@dimen/sound_layout_height"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:background="@drawable/settingborder"
                    android:clickable="false"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <RelativeLayout
                        android:id="@+id/soundOnLay"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/disable_border">

                        <TextView
                            android:id="@+id/soundOnTxt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:text="@string/on"
                            android:textColor="@color/listitem"
                            android:textSize="@dimen/setting_row_text_size" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/soundOffLay"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/enable_border">

                        <TextView
                            android:id="@+id/soundOffTxt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:text="@string/off"
                            android:textColor="@color/listitem"
                            android:textSize="@dimen/setting_row_text_size" />
                    </RelativeLayout>
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/RateUslay"
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_row_height"
                android:background="@drawable/card">

                <TextView
                    android:id="@+id/rateText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:text="@string/rateus"
                    android:textColor="@color/secondrytext"
                    android:textSize="@dimen/setting_row_text_size" />
            </RelativeLayout>






        </LinearLayout>
    </ScrollView>
</RelativeLayout>
